--- a/MvcDynamicForms.Demo/Views/Test/Index.cshtml
+++ b/MvcDynamicForms.Demo/Views/Test/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Index</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.Raw(Model.RenderHtml(true))
     <input type="submit" />
